kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-ticker-server
  labels:
    app: crypto-ticker-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-ticker-server
  template:
    metadata:
      labels:
        app: crypto-ticker-server
    spec:
      containers:
      - name: crypto-ticker-server
        image: madsunshinecreations/crypto-ticker-server
        volumeMounts:
        - name: crypto-ticker-storage
          mountPath: /config
        ports:
        - containerPort: 8080
      volumes:
      - name: crypto-ticker-storage
        persistentVolumeClaim:
          claimName: crypto-ticker-storage
