kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-ticker-server
spec:
  selector:
    app: crypto-ticker-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
